--- a/public/stylesheets/less_ui/pages/_home.less
+++ b/public/stylesheets/less_ui/pages/_home.less
@@ -12,15 +12,15 @@
   padding: 20px 25px;
 
   .header {
-    
+
     .large {
-      font-size: 2.333em;      
+      font-size: 2.333em;
     }
-    
+
     a {
       color: @color-white;
-      text-decoration: underline;      
-    }    
+      text-decoration: underline;
+    }
   }
 
   .add-btn {
@@ -33,32 +33,28 @@
   }
 
   .toggle-extra {
-    
+
     a {
       color: @color-white;
     }
 
     #flip {
-      padding-right: 30px;
-      background-image: url(../images/downarrow.png);
-      background-position: right center;
-      background-repeat: no-repeat;
-      background-size: 15px 10px;
+      padding-left: 15px;
     }
   }
 
   .toggle-content {
     display: none;
     margin-top: 40px;
-    
+
     .row {
       justify-content: center;
       align-items: center;
       margin-bottom: 10px;
-      
+
       span {
       }
-      
+
       a {
         color: @color-white;
         display: block;
@@ -68,31 +64,31 @@
           text-decoration: underline;
         }
       }
-      
+
       .btn {
         width: 130px;
         height: 38px;
       }
     }
-    
-    
+
+
     .tc-header {
-      
+
       span {
         font-weight: 400;
       }
-      
+
       .divider {
         margin-top: 2px;
         margin-bottom: 15px;
-        border-bottom: 1px solid rgba(255, 255, 255, .2);      
+        border-bottom: 1px solid rgba(255, 255, 255, .2);
       }
     }
   }
 }
 
 .banner-content {
-  
+
   h1 {
     background: rgba(64, 62, 57, .7);
     font-size: 2.333em;
@@ -103,7 +99,7 @@
     text-transform: uppercase;
     line-height: 1.4;
   }
-  
+
   h2,
   p {
     font-size: 1.8em;
@@ -114,8 +110,8 @@
     margin: 0;
     line-height: 1.4;
   }
-  
-  
+
+
   p {
     font-size: 1.2em;
   }
@@ -126,33 +122,33 @@
   background: @color-white;
   font-family: @secondary-font;
   text-align: center;
-  
+
   h3 {
     padding: 25px 0;
     font-size: 38px;
     font-weight: 800;
     color: @color-mid-grey;
-    
+
     span {
       color: @color-blue;
-    } 
+    }
   }
-  
+
   .setup-inside-block {
     display: block;
     border: 1px solid @color-white;
     padding: 20px;
     float: left;
-    width: 100%;  
+    width: 100%;
     min-height: 100%;
   }
-  
+
   .setup-grid {
     background: #1b8dc3;
-    padding: 50px 0;    
-    
+    padding: 50px 0;
+
   }
-  
+
   h5 {
     font-family: @primary-font;
     font-size: 22px;
@@ -161,7 +157,7 @@
     text-transform: uppercase;
     color: @color-white;
   }
-  
+
   p {
     color: @color-white;
     padding: 5px 25px;
