Fixed JS fiddle

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -256,7 +256,10 @@
 
           .btn-jsfiddle{
             display: inline-block;
-
+            a {
+              color: @font-color;
+              text-decoration: none;
+            }
             &:last-child {
               a:after{
                 content: "" !important;
