--- a/public/stylesheets/less/addSip.less
+++ b/public/stylesheets/less/addSip.less
@@ -2,7 +2,7 @@
   position: relative;
   height: 100px;
   width: 350px;
-  margin: 40px auto 0;
+  margin: 60px 60px 0;
   border-top: 2px solid @navbar-grey;
 
   .step {
