--- a/views/widget/new.pug
+++ b/views/widget/new.pug
@@ -42,8 +42,7 @@ block content
           #alert-success.alert.alert-success(style="display: none;")
 
         if currentUser.showWizard()
-          .col-xs-6.col-xs-offset-3
-            .sip-steps
+            .sip-steps.centered-steps
               .step
                 span Add a SIP Address
               .step.right.active
