--- a/views/login.pug
+++ b/views/login.pug
@@ -27,7 +27,7 @@ block content
               h4 Login
               strong
                 | Note for current Voxbone customers:&nbsp;
-              span your Click2Vox login will not be linked to your existing Voxbone account. We encourage you to create a separate account here for testing purposes. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+              span you can login with your Voxbone portal account. The WebRTC widgets and services created on click2vox.com are indepedant of your Voxbone account, DIDs, and trunk configuration. To add WebRTC to an existing DID, please view our instructions: #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
 
             .oauth-wrap
               h4.sub-header Login With:
