--- a/views/signup.pug
+++ b/views/signup.pug
@@ -41,7 +41,7 @@ block content
 
                     strong
                       | Note for current Voxbone customers:&nbsp;
-                    span your Click2Vox login will not be linked to your existing Voxbone account. We encourage you to create a separate account here for testing purposes. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                    span your Click2Vox login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit: #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
                 .oauth-wrap
                   h4.text-center Login with Google, Github, Windows Live or LinkedIn
                   include social-buttons
