Fixed uemail error un signup

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,7 @@ html(lang='en')
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js" async)
     script(src="//cdn.voxbone.com/voxbone/voxbone-2.1.0.min.js")
 
+    script(src="/lib/jquery/dist/jquery.min.js")
     script(src="/javascripts/directives/move-top.js")
     script(src="/javascripts/directives/easing.js")
 
