--- a/views/login.pug
+++ b/views/login.pug
@@ -1,5 +1,13 @@
 extends layout
 
+block default_nav
+  .collapse.navbar-toggleable-sm.pull-right(id="bd-main-nav")
+    ul.nav.navbar-nav
+      li.nav-item
+        a.nav-item.nav-link(href="/") Home
+      li.nav-item
+        a.nav-item.nav-link(href='/account/signup') Create Account
+
 block extra_head
   script.
     require(
