--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,7 +6,7 @@ block default_nav
       li.nav-item
         a.nav-item.nav-link(href="/") Home
       li.nav-item
-        a.nav-item.nav-link(href='/account/login') Login
+        a.nav-item.nav-link(href='/login') Login
 
 block extra_head
   script(src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer)
