Fixed skip adding SIP URI

--- a/views/sip/new.pug
+++ b/views/sip/new.pug
@@ -58,5 +58,5 @@ block content
 
                     .form-group(ng-cloak)
                       button.btn.btn-purple.save-sip(ng-disabled="sip_form.$invalid || onSubmitting" ng-click="saveSipURI(sip_form)" data-loading-text="Loading..." name="submitBtn") {{submitText}}
-                      button.btn.btn-success.pull-right.skip-sip(ng-click="skipURI('#{process.env.APP_URL}/widget/new')"
+                      button.btn.btn-success.pull-right.skip-sip(ng-click=`skipURI('${process.env.APP_URL}/widget/new')`
                       name="submitBtn") {{skipText}}
