responsive for forgot page, login page, register page

--- a/public/stylesheets/less_ui/pages/_home.less
+++ b/public/stylesheets/less_ui/pages/_home.less
@@ -119,7 +119,7 @@
 }
 
 .home-setup {
-  padding: 115px;
+  padding: 115px 0;
   background: @color-white;
   font-family: @secondary-font;
   text-align: center;
@@ -139,6 +139,7 @@
     display: block;
     border: 1px solid @color-white;
     padding: 20px;
+    margin-bottom: 20px;
     float: left;
     width: 100%;
     min-height: 100%;
