--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ block content
   .site-wrapper-inner.home-wrap
     .container
       .row.banner-content
-        .col-xs-8
+        .col-sm-12.col-md-8
 
           h1 NO WEB DEVELOPMENT NEEDED
           h2 HD calling to any SIP address straight from any website
@@ -21,19 +21,19 @@ block content
             span  in 3 Easy Steps
 
       .row
-        .col-md-4
+        .col-sm-12.col-md-4
           .setup-grid.setup-inside-block
             img(alt="Icon2" src="../../images/icon2.png")
             h5 Create
             p Create and customize your call button
 
-        .col-md-4
+        .col-sm-12.col-md-4
           .setup-grid.setup-inside-block
             img(alt="Icon3" src="../../images/iconM.png")
             h5 Add
             p Add a SIP address &amp; place a test call
 
-        .col-md-4
+        .col-sm-12.col-md-4
           .setup-grid.setup-inside-block
             img(alt="Icon1" src="../../images/icon1.png")
             h5 Embed
@@ -45,7 +45,7 @@ block content
 
         .row
 
-          .col-md-4.address
+          .col-md-4
             h3 Address
             address
               |535 Mission St
@@ -60,7 +60,7 @@ block content
               "https://www.voxbone.com/" target="_blank")
                   img(alt="" src="../../images/voxbone-logo.png")
 
-          .col-md-4.links
+          .col-md-4
             h3 Links
             ul.links
               li
