--- a/views/login.pug
+++ b/views/login.pug
@@ -22,7 +22,7 @@ block content
   .site-wrapper-inner.home-wrap
     .container
       .row
-        .col-xs-5
+        .col-sm-12.col-md-7.col-lg-
           while m = message.shift()
             #tokenError.alert(class='alert-' + m.type)
               div= m.message
