--- a/public/stylesheets/less_ui/pages/_register.less
+++ b/public/stylesheets/less_ui/pages/_register.less
@@ -41,6 +41,7 @@
     display: inline-block;
     width: 55px;
     height: 55px;
+    margin-bottom: 10px;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
