--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -13,8 +13,9 @@ Font Awesome
 Plugin Css
 ================================================ */
 /* Bootstrap */
-@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css";
+@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css";
 @import "less_ui/plugins/bootstrap-flex.css";
+
 
 /* ================================================
 Main Css
@@ -43,7 +44,7 @@ Main Css
 /* Main Css Codes */
 @import "less/mixing";
 @import "less/custom";
-@import "less/addSip";
+/* @import "less/addSip"; (added to new ui) */
 @import "less/createButton";
 @import "less/buttonList";
 
