--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -11,7 +11,7 @@ Font Awesome
 Plugin Css
 ================================================ */
 /* Bootstrap */
-@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css";
+@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css";
 @import "less_ui/plugins/bootstrap-flex.css";
 /* ================================================
 Main Css
@@ -453,6 +453,49 @@ body {
   max-width: 230px;
   margin: 0 10px 20px;
 }
+.sip-steps {
+  position: relative;
+  height: 100px;
+  width: auto;
+  margin: 60px 100px 0;
+  border-top: 2px solid #92a5a5;
+}
+.sip-steps .step {
+  width: 200px;
+  position: absolute;
+  left: -100px;
+  top: -18px;
+  text-align: center;
+}
+.sip-steps .step:before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  border: 2px solid #92a5a5;
+  background: #fff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.sip-steps .step.active:before {
+  background: #781e75;
+  border-color: #781e75;
+}
+.sip-steps .step span {
+  display: block;
+  margin-top: 15px;
+}
+.sip-steps .step.right {
+  left: inherit;
+  right: -100px;
+  text-align: center;
+}
+.centered-steps {
+  margin-left: auto;
+  margin-right: auto;
+}
 .button-page .form-group label {
   margin-bottom: 2px;
   display: block;
@@ -699,49 +742,7 @@ pre {
 .social-buttons a {
   margin-right: 5px;
 }
-.sip-steps {
-  position: relative;
-  height: 100px;
-  width: 350px;
-  margin: 60px 60px 0;
-  border-top: 2px solid #92a5a5;
-}
-.sip-steps .step {
-  width: 200px;
-  position: absolute;
-  left: -100px;
-  top: -18px;
-  text-align: center;
-}
-.sip-steps .step:before {
-  content: "";
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
-  border: 2px solid #92a5a5;
-  background: #fff;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-.sip-steps .step.active:before {
-  background: #781e75;
-  border-color: #781e75;
-}
-.sip-steps .step span {
-  display: block;
-  margin-top: 15px;
-}
-.sip-steps .step.right {
-  left: inherit;
-  right: -100px;
-  text-align: center;
-}
-.centered-steps {
-  margin-left: auto;
-  margin-right: auto;
-}
+/* @import "less/addSip"; (added to new ui) */
 .b-r-t {
   -webkit-border-top-right-radius: 6px;
   -webkit-border-bottom-right-radius: 6px;
