--- a/public/stylesheets/less_ui/modules/_panel.less
+++ b/public/stylesheets/less_ui/modules/_panel.less
@@ -3,7 +3,7 @@
   color: #fff;
   margin-bottom: 0;
   font-weight: 100;
-  padding: 20px 25px;
+  padding: 20px 25px 35px;
 
   hr {
     border-color: @color-white;
