--- a/public/stylesheets/less_ui/pages/_home.less
+++ b/public/stylesheets/less_ui/pages/_home.less
@@ -101,8 +101,10 @@
     line-height: 1.4;
   }
 
+
   h2,
   p {
+    color: rgb(0, 30, 34);
     font-size: 1.8em;
     font-family: @secondary-font;
     background: rgba(255,255,255,0.8);
@@ -112,9 +114,10 @@
     line-height: 1.4;
   }
 
-
   p {
-    font-size: 1.2em;
+    font-size: 1.1em;
+    line-height: 1.8;
+    text-shadow: 1px 1px 1px rgba(150, 150, 150, 0.5);
   }
 }
 
@@ -125,6 +128,7 @@
   text-align: center;
 
   h3 {
+    margin-bottom: 70px;
     padding: 25px 0;
     font-size: 38px;
     font-weight: 800;
@@ -147,7 +151,7 @@
 
   .setup-grid {
     background: #1b8dc3;
-    padding: 50px 0;
+    padding: 50px 0 0;
 
   }
 
@@ -167,5 +171,6 @@
     font-size: 16px;
     margin-top: 10px;
     line-height: 1.5;
+    font-weight: normal;
   }
 }
