--- a/public/stylesheets/less_ui/pages/_register.less
+++ b/public/stylesheets/less_ui/pages/_register.less
@@ -15,12 +15,22 @@
       margin-top: 30px;
       margin-bottom: 30px;
     }     
+  
+    p {
+      margin: 0;
+    }
   }
 
   .sub-header {
     text-align: center;
     font-size: 1.200em;
     font-weight: normal;
+  }
+
+  .captcha {
+  
+    margin: 1px 0;  
+  
   }
 }
 
@@ -30,7 +40,6 @@
   text-align: center;
   font-weight: normal;
   padding-top: 30px;
-  padding-bottom: 10px;
   
   h4 {
     margin-bottom: 10px;
@@ -47,15 +56,15 @@
     vertical-align: middle;
     padding-top: 9px;
     padding-bottom: 9px;
-    background: @color-purple;
-    border-color: @color-purple;
-    color: @color-white;
+    background: @color-white;
+    border-color: @color-white;
+    color: @color-purple;
     border-radius: 6px;    
     
     &:hover {
-      background: darken(@color-purple, 5%);
+      background: darken(@color-white, 5%);
       text-decoration: none;
-      color: @color-white;
+      color: @color-purple;
     }
     
     .fa {
