Style fixes for Forgot Password - Add new SIP

--- a/public/stylesheets/less_ui/pages/_sip.less
+++ b/public/stylesheets/less_ui/pages/_sip.less
@@ -1,3 +1,17 @@
+.add-sip {
+  padding-top: 0 !important;
+  
+  .button-wrap {
+    text-align: center;
+    padding-top: 5px;
+
+    
+    button {
+      margin: 0 10px;
+    }
+  }
+}
+
 .edit-sip {
   .modal-body {
     
