--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -34,6 +34,7 @@ Main Css
 @import "less_ui/modules/_tool-tip";
 @import "less_ui/modules/_custom-modal";
 @import "less_ui/modules/_panel";
+@import "less_ui/modules/_tootlip";
 
 /* App Sections */
 @import "less_ui/pages/_register";
