--- a/views/forgot.pug
+++ b/views/forgot.pug
@@ -47,27 +47,30 @@ block content
       .site-wrapper-inner.home-wrap
         .container
           .row
-            .col-sm-12.col-md-7.col-lg-6
+            .col-sm-12.col-md-10.col-lg-8.col-xl-6
               .panel-content
-                h1 Forgot Password
+                .panel-header
+                  h4 Forgot Password
 
-                if message
-                  #tokenError.alert.alert-danger
-                    div= message
-                #errormsg.alert.alert-danger(style="display: none;")
-                #successmsg.alert.alert-success(style="display: none;")
-
-                #form_container
-                  .formWrap
-                    form#forgot_form(ng-controller="ForgotController" ng-init="forgot.uemail='#{email || ''}'" name="forgot_form" novalidate)
-                      .form-group
-                        label.control-label Email
-                        input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail" required)
-                        .error-label(ng-cloak ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
-                          div(ng-show="forgot_form.uemail.$error.required") Email is required
-                        .error-label(ng-cloak ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
-                          div(ng-show="forgot_form.uemail.$error.email") Email is invalid
-
-                      button.btn.btn-block.btn-default-custom#forgot(ng-disabled="forgot_form.$invalid || submitting" ng-click="processForm()") Reset Password
-                      br
-                      a(href="/")
+                .register-content.forgot-pass
+                
+                  if message
+                    #tokenError.alert.alert-danger
+                      div= message
+                  #errormsg.alert.alert-danger(style="display: none;")
+                  #successmsg.alert.alert-success(style="display: none;")
+  
+                  #form_container
+                    .formWrap
+                      form#forgot_form(ng-controller="ForgotController" ng-init="forgot.uemail='#{email || ''}'" name="forgot_form" novalidate)
+                        .form-group
+                          label.control-label Email
+                          input.form-control(type="email" id="uemail" name="uemail" placeholder="email@example.com" ng-model="forgot.uemail" required)
+                          .error-label(ng-cloak ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
+                            div(ng-show="forgot_form.uemail.$error.required") Email is required
+                          .error-label(ng-cloak ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
+                            div(ng-show="forgot_form.uemail.$error.email") Email is invalid
+  
+                        button.btn.btn-block.btn-default-custom#forgot(ng-disabled="forgot_form.$invalid || submitting" ng-click="processForm()") Reset Password
+                        br
+                        a(href="/")
