--- a/public/stylesheets/less_ui/modules/_header.less
+++ b/public/stylesheets/less_ui/modules/_header.less
@@ -10,6 +10,8 @@
   .navbar-nav {
   
     >li {
+      margin-left: 15px;
+      margin-right: 15px;
       
       >a {
       	color: @color-white;
