--- a/public/stylesheets/less_ui/pages/_register.less
+++ b/public/stylesheets/less_ui/pages/_register.less
@@ -32,6 +32,14 @@
     margin: 1px 0;  
   
   }
+  
+  &.forgot-pass {
+    form {
+      .btn {
+        margin-bottom: 0;
+      }
+    }     
+  }
 }
 
 
@@ -64,7 +72,7 @@
     &:hover {
       background: darken(@color-white, 5%);
       text-decoration: none;
-      color: @color-purple;
+      color: @color-white;
     }
     
     .fa {
