--- a/views/home.pug
+++ b/views/home.pug
@@ -90,6 +90,6 @@ block content
               button.btn.btn-default(type="submit") Sign up for Newsletter
 
       .footer
-        p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA]
+        p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA]
 
 
